# convergio-sdk

./: .env.example  .release-please-manifest.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONSTITUTION.md  Cargo.toml  README.md  deny.toml  release-please-config.json
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  lockfile-update.yml  release.yml  scorecard.yml
crates/convergio-db/: Cargo.toml  README.md
crates/convergio-db/src/: core_tables.rs  ext.rs  helpers.rs  lib.rs  migration.rs  pool.rs
crates/convergio-db/tests/: integration_db.rs
crates/convergio-security/: Cargo.toml  README.md
crates/convergio-security/src/: aead.rs  audit.rs  ext.rs  jwt.rs  lib.rs  rate_limiter.rs  rbac.rs  sandbox.rs  schema.rs  ssrf.rs  trust.rs  trust_routes.rs  types.rs
crates/convergio-security/tests/: adversarial_security.rs  integration_security.rs
crates/convergio-telemetry/: Cargo.toml  README.md
crates/convergio-telemetry/src/: health.rs  lib.rs  logging.rs  metrics.rs
crates/convergio-telemetry/tests/: integration_telemetry.rs
crates/convergio-types/: Cargo.toml  README.md
crates/convergio-types/src/: api_error.rs  config.rs  dev_auth.rs  errors.rs  events.rs  extension.rs  lib.rs  manifest.rs  message_error.rs  platform_paths.rs  platform_restart.rs  resilience.rs
crates/convergio-types/tests/: integration_types.rs
docs/adr/: 001-sdk-extraction.md  002-quality-framework.md  004-security-audit-fixes.md  ADR-003-opentelemetry-migration.md
