[workspace]
resolver = "2"
members = ["crates/convergio-types"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "LicenseRef-Convergio-Community"
repository = "https://github.com/Roberdan/convergio-sdk"

[workspace.dependencies]
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = { version = "0.7", features = ["ws", "multipart"] }
dirs = "6"
