[workspace]
resolver = "2"
members = [
    "crates/convergio-types",
    "crates/convergio-telemetry",
    "crates/convergio-db",
    "crates/convergio-security",
]

[workspace.package]
version = "0.1.10" # x-release-please-version
edition = "2021"
license = "MIT"
repository = "https://github.com/Roberdan/convergio-sdk"
homepage = "https://github.com/Roberdan/convergio-sdk"
authors = ["Roberto D'Angelo <roberto@convergio.io>"]

[workspace.dependencies]
# Internal crates — version required for crates.io, path for local dev
convergio-types = { path = "crates/convergio-types", version = "0.1.9" }
convergio-db = { path = "crates/convergio-db", version = "0.1.9" }

# Shared deps
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = { version = "0.7", features = ["ws", "multipart"] }
dirs = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
hmac = "0.13"
sha2 = "0.11"
base64 = "0.22"
getrandom = "0.4"
chacha20poly1305 = "0.10"
url = "2"
