[package]
name = "convergio-db"
description = "Database pool, migration runner, schema registry"
version = "0.1.6"
edition.workspace = true
license.workspace = true

[dependencies]
convergio-types = { workspace = true }
rusqlite = { workspace = true }
r2d2 = { workspace = true }
r2d2_sqlite = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
