[package]
name = "convergio-security"
description = "Auth, HMAC, crypto, audit logging, trust, sandbox"
version = "0.1.5"
edition.workspace = true
license.workspace = true

[dependencies]
convergio-types = { workspace = true }
convergio-db = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
rusqlite = { workspace = true }
axum = { workspace = true }
getrandom = { workspace = true }
chacha20poly1305 = { workspace = true }
