[package]
name = "convergio-security"
description = "Auth, HMAC, crypto, audit logging, trust, sandbox"
version = "0.1.9"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords = ["convergio", "security", "auth", "hmac", "crypto"]
categories = ["authentication"]
readme = "README.md"

[dependencies]
convergio-types = { workspace = true }
convergio-db = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
rusqlite = { workspace = true }
axum = { workspace = true }
getrandom = { workspace = true }
chacha20poly1305 = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
