[package]
name = "convergio-telemetry"
description = "Tracing, metrics collection, health aggregation"
version = "0.1.1"
edition.workspace = true
license.workspace = true

[dependencies]
convergio-types = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
