[package]
name = "convergio-telemetry"
description = "Tracing, metrics collection, health aggregation"
version = "0.1.10"
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords = ["convergio", "telemetry", "tracing", "metrics", "observability"]
categories = ["development-tools::debugging"]
readme = "README.md"

[dependencies]
convergio-types = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
