[package]
name = "convergio-types"
description = "Core types, Extension trait, Manifest, DomainEvent — the contract everything builds on"
version = "0.1.10" # x-release-please-version
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords = ["convergio", "ai-agents", "extension", "types", "daemon"]
categories = ["development-tools"]
readme = "README.md"

[dependencies]
thiserror = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
dirs = { workspace = true }

[dev-dependencies]
toml = "1.1"
